--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,15 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+<servlet>
+<servlet-name>HallServlet</servlet-name>
+<servlet-class>servlet.HallServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>HallServlet</servlet-name>
+<url-pattern>/hall</url-pattern>
+</servlet-mapping>
 </web-app>
